fix :: Expo 토큰 필터링 null 방어 추가